# multipurpose-chatbot

./: .env.example  .gitignore  LICENSE.txt  generate_faiss.py  pyproject.toml  requirements.txt  test_db.py
Models/: ,env  app.py
Models/app/: __init__.py  chatbot.py  routes.py
Models/app/templates/: base.html  chat.html  home.html
app/: __init__.py
app/templates/: home.html
backend/: config.py  routes.py
chainlit/: chatbot_chainlit.py
database/: database.py  models.py
table/: happy.py  sqldb_database.py  sqldb_models.py
templates/: base.html
