[project]
name = "multipurpose-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Shishupal Rajpurohit",email = "132904812+ShishupalRajpurohit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "chainlit (>=2.6.2,<3.0.0)",
    "langchain (==0.3.26)",
    "langchain-core (>=0.3.69,<0.4.0)",
    "langchain-groq (>=0.3.6,<0.4.0)",
    "openai (>=1.97.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "pypdf (>=5.9.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
